gl51-master/src/test/deca/context/invalid/incorrect_num_param.deca
class A{
	protected int a;
	void seta(int a){ this.a = a;}
	void test(){
		seta(); //doit retourner incorrect number of parameters à cette ligne
	}
}